deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wisecow-app
  template:
    metadata:
      labels:
        app: wisecow-app
    spec:
      containers:
        - name: wisecow-container
          image: athulbs/wisecow:latest
          ports:
            - containerPort: 4499


apiVersion: v1
kind: Service
metadata:
  name: wisecow-app-service
spec:
  selector:
    app: wisecow-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4499
  type: LoadBalancer
