ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wisecow-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - my-demo-app.local
      secretName: my-demo-app-tls
  rules:
    - host: my-demo-app.local
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: wisecow-app-service
                port:
                  number: 80
